<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item android:id="@+id/action_refresh" android:title="@string/refresh" app:showAsAction="never" />
    <item android:id="@+id/action_check" android:title="@string/check" app:showAsAction="never" />
    <item android:id="@+id/action_hide_dead" android:title="@string/hide_dead" android:checkable="true" app:showAsAction="never" />
    <item android:id="@+id/action_sources" android:title="@string/sources" app:showAsAction="never" />
    <item android:id="@+id/action_adult" android:title="@string/adult" app:showAsAction="never" />
</menu>
